moar spacing, try to fix prod env shit

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -28,7 +28,7 @@
 #current-stock {
     @include body-text;
 
-    margin-bottom: 60px;
+    margin-bottom: 75px;
 
     .categories { }
     .subcategories {
